[gd_scene load_steps=13 format=3 uid="uid://cpd6wj5j5if75"]

[ext_resource type="Script" uid="uid://c2m7ihlo5pegp" path="res://Simulators/GS/gs_sim_vm.gd" id="1_4tjyf"]
[ext_resource type="Script" uid="uid://dl827em2x7plr" path="res://Simulators/Common/binding_toggle.gd" id="2_r84ew"]
[ext_resource type="PackedScene" uid="uid://ch2n84sc3wmf7" path="res://Simulators/Common/SliderLabel.tscn" id="3_n8fa1"]
[ext_resource type="Script" uid="uid://3rtt2x2wf0qt" path="res://Simulators/Common/binding_range.gd" id="4_350ti"]
[ext_resource type="PackedScene" uid="uid://sujk6ak3foum" path="res://Simulators/Common/CoarseFineButton.tscn" id="5_ky4cm"]
[ext_resource type="Theme" uid="uid://bviba2gp6cqj3" path="res://sim_theme.tres" id="6_icf5t"]
[ext_resource type="PackedScene" uid="uid://bt7qthyv573qi" path="res://Simulators/Common/GraphControl.tscn" id="7_obiec"]
[ext_resource type="Script" uid="uid://1cyo4py2n4u8" path="res://Simulators/GS/gs_graph_control_vm.gd" id="8_4l7dy"]
[ext_resource type="Script" uid="uid://bf2kgjyvgrs8g" path="res://Simulators/GS/ddm_reader.gd" id="9_agt8p"]
[ext_resource type="Script" uid="uid://b48ybfirq0psw" path="res://Simulators/GS/drag_point.gd" id="9_e48xn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6obd"]
bg_color = Color(0, 0.203922, 0.231373, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0.203125, 0.230469, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_skwrq"]
allow_unpress = true

[node name="pair_sim" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/autohide = 0
split_offset = 300

[node name="Antenna Controls" type="ScrollContainer" parent="HSplitContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i6obd")

[node name="GSSimVM" type="VBoxContainer" parent="HSplitContainer/Antenna Controls" node_paths=PackedStringArray("graph")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4tjyf")
graph = NodePath("../../Graph Control")

[node name="ResetButton" type="Button" parent="HSplitContainer/Antenna Controls/GSSimVM"]
layout_mode = 2
text = "Reset"

[node name="overlay_button" type="CheckBox" parent="HSplitContainer/Antenna Controls/GSSimVM" node_paths=PackedStringArray("target")]
layout_mode = 2
text = "Overlay"
script = ExtResource("2_r84ew")
target = NodePath("..")
target_property = "overlay"

[node name="PhaseModeButton" type="CheckBox" parent="HSplitContainer/Antenna Controls/GSSimVM" node_paths=PackedStringArray("target")]
layout_mode = 2
text = "Phase Mode"
script = ExtResource("2_r84ew")
target = NodePath("..")
target_property = "phase_mode"

[node name="Antenna1Enabled" type="CheckButton" parent="HSplitContainer/Antenna Controls/GSSimVM" node_paths=PackedStringArray("target")]
layout_mode = 2
text = "CSB Lower"
script = ExtResource("2_r84ew")
target = NodePath("..")
target_property = "enabledCSB"

[node name="ASpaceLabel" parent="HSplitContainer/Antenna Controls/GSSimVM" node_paths=PackedStringArray("target") instance=ExtResource("3_n8fa1")]
layout_mode = 2
text = "a-spacing: %.2f"
target = NodePath("..")
target_property = "aspaceCSB"
format_string = "a-spacing: %.2f"

[node name="ASpaceHBox" type="HBoxContainer" parent="HSplitContainer/Antenna Controls/GSSimVM"]
layout_mode = 2

[node name="ASpaceSlider" type="HSlider" parent="HSplitContainer/Antenna Controls/GSSimVM/ASpaceHBox" node_paths=PackedStringArray("target")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_force_pass_scroll_events = false
max_value = 3440.0
step = 45.0
tick_count = 5
ticks_on_borders = true
script = ExtResource("4_350ti")
target = NodePath("../..")
target_property = "aspaceCSB"

[node name="ASpaceSliderButton" parent="HSplitContainer/Antenna Controls/GSSimVM/ASpaceHBox" node_paths=PackedStringArray("slider") instance=ExtResource("5_ky4cm")]
layout_mode = 2
theme = ExtResource("6_icf5t")
button_pressed = true
coarse_step = 45.0
fine_step = 0.5
slider = NodePath("../ASpaceSlider")

[node name="Antenna1PhaseLabel" parent="HSplitContainer/Antenna Controls/GSSimVM" node_paths=PackedStringArray("target") instance=ExtResource("3_n8fa1")]
layout_mode = 2
text = "Phase: %.2f"
target = NodePath("..")
target_property = "phaseCSB"
format_string = "Phase: %.2f"

[node name="Antenna1Phase" type="HBoxContainer" parent="HSplitContainer/Antenna Controls/GSSimVM"]
layout_mode = 2

[node name="Antenna1PhaseSlider" type="HSlider" parent="HSplitContainer/Antenna Controls/GSSimVM/Antenna1Phase" node_paths=PackedStringArray("target")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
tooltip_text = "asdf"
mouse_force_pass_scroll_events = false
min_value = -360.0
max_value = 360.0
step = 11.25
tick_count = 5
ticks_on_borders = true
script = ExtResource("4_350ti")
target = NodePath("../..")
target_property = "phaseCSB"

[node name="CoarseFineButton" parent="HSplitContainer/Antenna Controls/GSSimVM/Antenna1Phase" node_paths=PackedStringArray("slider") instance=ExtResource("5_ky4cm")]
layout_mode = 2
theme = ExtResource("6_icf5t")
button_pressed = true
coarse_step = 45.0
slider = NodePath("../Antenna1PhaseSlider")

[node name="Antenna1CurrentLabel" parent="HSplitContainer/Antenna Controls/GSSimVM" node_paths=PackedStringArray("target") instance=ExtResource("3_n8fa1")]
layout_mode = 2
text = "Current: %.2f"
target = NodePath("..")
target_property = "currentCSB"
format_string = "Current: %.2f"

[node name="Antenna1Current" type="HBoxContainer" parent="HSplitContainer/Antenna Controls/GSSimVM"]
layout_mode = 2

[node name="Antenna1CurrentSlider" type="HSlider" parent="HSplitContainer/Antenna Controls/GSSimVM/Antenna1Current" node_paths=PackedStringArray("target")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_force_pass_scroll_events = false
max_value = 2.0
step = 0.1
value = 1.0
tick_count = 5
ticks_on_borders = true
script = ExtResource("4_350ti")
target = NodePath("../..")
target_property = "currentCSB"

[node name="Antenna1CFButton" parent="HSplitContainer/Antenna Controls/GSSimVM/Antenna1Current" node_paths=PackedStringArray("slider") instance=ExtResource("5_ky4cm")]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_icf5t")
button_pressed = true
coarse_step = 0.1
fine_step = 0.05
slider = NodePath("../Antenna1CurrentSlider")

[node name="Antenna2Enabled" type="CheckButton" parent="HSplitContainer/Antenna Controls/GSSimVM" node_paths=PackedStringArray("target")]
layout_mode = 2
text = "SBO Upper"
script = ExtResource("2_r84ew")
target = NodePath("..")
target_property = "enabledSBO"

[node name="ASpaceLabel2" parent="HSplitContainer/Antenna Controls/GSSimVM" node_paths=PackedStringArray("target") instance=ExtResource("3_n8fa1")]
layout_mode = 2
text = "a-spacing: %.2f"
target = NodePath("..")
target_property = "aspaceSBO"
format_string = "a-spacing: %.2f"

[node name="ASpaceHBox2" type="HBoxContainer" parent="HSplitContainer/Antenna Controls/GSSimVM"]
layout_mode = 2

[node name="ASpaceSlider" type="HSlider" parent="HSplitContainer/Antenna Controls/GSSimVM/ASpaceHBox2" node_paths=PackedStringArray("target")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_force_pass_scroll_events = false
max_value = 6880.0
step = 45.0
tick_count = 5
ticks_on_borders = true
script = ExtResource("4_350ti")
target = NodePath("../..")
target_property = "aspaceSBO"

[node name="ASpaceSliderButton" parent="HSplitContainer/Antenna Controls/GSSimVM/ASpaceHBox2" node_paths=PackedStringArray("slider") instance=ExtResource("5_ky4cm")]
layout_mode = 2
theme = ExtResource("6_icf5t")
button_pressed = true
coarse_step = 45.0
fine_step = 0.5
slider = NodePath("../../ASpaceHBox/ASpaceSlider")

[node name="Antenna2PhaseLabel" parent="HSplitContainer/Antenna Controls/GSSimVM" node_paths=PackedStringArray("target") instance=ExtResource("3_n8fa1")]
layout_mode = 2
text = "Phase: %.2f"
target = NodePath("..")
target_property = "phaseSBO"
format_string = "Phase: %.2f"

[node name="Antenna2Phase" type="HBoxContainer" parent="HSplitContainer/Antenna Controls/GSSimVM"]
layout_mode = 2

[node name="Antenna2PhaseSlider" type="HSlider" parent="HSplitContainer/Antenna Controls/GSSimVM/Antenna2Phase" node_paths=PackedStringArray("target")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_force_pass_scroll_events = false
min_value = -360.0
max_value = 360.0
step = 11.25
tick_count = 5
ticks_on_borders = true
script = ExtResource("4_350ti")
target = NodePath("../..")
target_property = "phaseSBO"

[node name="CoarseFineButton" parent="HSplitContainer/Antenna Controls/GSSimVM/Antenna2Phase" node_paths=PackedStringArray("slider") instance=ExtResource("5_ky4cm")]
layout_mode = 2
theme = ExtResource("6_icf5t")
button_pressed = true
coarse_step = 45.0
slider = NodePath("../Antenna2PhaseSlider")

[node name="Antenna2CurrentLabel" parent="HSplitContainer/Antenna Controls/GSSimVM" node_paths=PackedStringArray("target") instance=ExtResource("3_n8fa1")]
layout_mode = 2
text = "Current: %.2f"
target = NodePath("..")
target_property = "currentSBO"
format_string = "Current: %.2f"

[node name="Antenna2Current" type="HBoxContainer" parent="HSplitContainer/Antenna Controls/GSSimVM"]
layout_mode = 2

[node name="Antenna2CurrentSlider" type="HSlider" parent="HSplitContainer/Antenna Controls/GSSimVM/Antenna2Current" node_paths=PackedStringArray("target")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_force_pass_scroll_events = false
max_value = 2.0
step = 0.1
value = 1.0
tick_count = 5
ticks_on_borders = true
script = ExtResource("4_350ti")
target = NodePath("../..")
target_property = "currentSBO"

[node name="Antenna2CFButton" parent="HSplitContainer/Antenna Controls/GSSimVM/Antenna2Current" node_paths=PackedStringArray("slider") instance=ExtResource("5_ky4cm")]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_icf5t")
button_pressed = true
coarse_step = 0.1
fine_step = 0.05
slider = NodePath("../Antenna2CurrentSlider")

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/Antenna Controls/GSSimVM"]
layout_mode = 2
theme = ExtResource("6_icf5t")

[node name="plus30Button" type="Button" parent="HSplitContainer/Antenna Controls/GSSimVM/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_skwrq")
text = "+30"

[node name="minus30Button" type="Button" parent="HSplitContainer/Antenna Controls/GSSimVM/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_skwrq")
text = "-30"

[node name="plus90Button" type="Button" parent="HSplitContainer/Antenna Controls/GSSimVM/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_skwrq")
text = "+90"

[node name="minus90Button" type="Button" parent="HSplitContainer/Antenna Controls/GSSimVM/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_skwrq")
text = "-90"

[node name="SwapButton" type="Button" parent="HSplitContainer/Antenna Controls/GSSimVM"]
layout_mode = 2
text = "Swap"

[node name="HideUnderground" type="CheckButton" parent="HSplitContainer/Antenna Controls/GSSimVM" node_paths=PackedStringArray("target")]
layout_mode = 2
text = "Hide underground"
script = ExtResource("2_r84ew")
target = NodePath("..")
target_property = "underground"

[node name="ExitButton" type="Button" parent="HSplitContainer/Antenna Controls/GSSimVM"]
layout_mode = 2
size_flags_vertical = 10
text = "EXIT"

[node name="Graph Control" parent="HSplitContainer" node_paths=PackedStringArray("target", "point") instance=ExtResource("7_obiec")]
layout_mode = 2
script = ExtResource("8_4l7dy")
target = NodePath("../Antenna Controls/GSSimVM")
point = NodePath("plane")

[node name="Graph" parent="HSplitContainer/Graph Control" index="0"]
layout_mode = 1
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HSplitContainer/Graph Control" node_paths=PackedStringArray("graph", "point")]
layout_mode = 0
offset_left = 65.0
offset_top = 511.0
offset_right = 224.0
offset_bottom = 537.0
text = "asdfasdf"
script = ExtResource("9_agt8p")
graph = NodePath("../Graph")
point = NodePath("../plane")

[node name="plane" type="ColorRect" parent="HSplitContainer/Graph Control" node_paths=PackedStringArray("graph")]
z_index = -50
layout_mode = 0
offset_left = 421.0
offset_top = 426.0
offset_right = 431.0
offset_bottom = 436.0
script = ExtResource("9_e48xn")
graph = NodePath("../Graph")

[connection signal="pressed" from="HSplitContainer/Antenna Controls/GSSimVM/ResetButton" to="HSplitContainer/Antenna Controls/GSSimVM" method="_on_reset_button_pressed"]
[connection signal="toggled" from="HSplitContainer/Antenna Controls/GSSimVM/HBoxContainer/plus30Button" to="HSplitContainer/Antenna Controls/GSSimVM" method="_on_insert_changed" binds= [30.0]]
[connection signal="toggled" from="HSplitContainer/Antenna Controls/GSSimVM/HBoxContainer/minus30Button" to="HSplitContainer/Antenna Controls/GSSimVM" method="_on_insert_changed" binds= [-30.0]]
[connection signal="toggled" from="HSplitContainer/Antenna Controls/GSSimVM/HBoxContainer/plus90Button" to="HSplitContainer/Antenna Controls/GSSimVM" method="_on_insert_changed" binds= [90.0]]
[connection signal="toggled" from="HSplitContainer/Antenna Controls/GSSimVM/HBoxContainer/minus90Button" to="HSplitContainer/Antenna Controls/GSSimVM" method="_on_insert_changed" binds= [-90.0]]
[connection signal="pressed" from="HSplitContainer/Antenna Controls/GSSimVM/SwapButton" to="HSplitContainer/Antenna Controls/GSSimVM" method="_on_swap_button_pressed"]
[connection signal="pressed" from="HSplitContainer/Antenna Controls/GSSimVM/ExitButton" to="HSplitContainer/Antenna Controls/GSSimVM" method="_on_exit_button_pressed"]

[editable path="HSplitContainer/Graph Control"]
